--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,14 @@ section {
     position: relative;
 }
 
+.hero-text{
+
+}
+
+.hero-text{
+    color: #fce138;
+}
+
 .hero-form{
     color: #024e76;
     background-color: #fce138;
