--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,8 @@ header nav ul{
     align-items: center;
     list-style: none;
 }
-header nav li a {
-    margin: 0 30px;
+header nav ul li a {
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -82,6 +82,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta{
@@ -90,7 +91,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2{
@@ -161,7 +162,7 @@ section {
 }
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
