--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,3 +339,14 @@ section {
     font-size: 16px;
 }
 
+@media screen and (max-width: 980px) {
+      
+}
+
+@media screen and (max-width: 768px) {
+   
+}
+
+@media screen and (max-width: 575px) {
+    
+}
